[package]
name = "quantum_cryptographic_toolkit"
version = "0.2.0"
edition = "2021"

# Authors of the project
authors = ["Daniil Krizhanovskyi <daniil.krizhanovskyi@hotmail.com>"]
description = "A toolkit for developing, testing, and deploying quantum-resistant cryptographic algorithms."
license = "MIT"
repository = "https://github.com/dkrizhanovskyi/quantum_cryptographic_toolkit"
homepage = "https://github.com/dkrizhanovskyi/quantum_cryptographic_toolkit"
documentation = "https://docs.rs/quantum_cryptographic_toolkit"
keywords = ["cryptography", "quantum", "post-quantum", "rust"]
categories = ["cryptography"]

[dependencies]
criterion = "0.5.1"
regex = "1.10.5"  
clap = "4.5.16"

[dev-dependencies]
# Dependencies for testing
